# nesy-reasoning-mcp

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README.zh-CN.md  SPEC_COMPLIANCE.md  nesy-reasoning-mcp-spec-v2.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  version_plan.yml
.github/workflows/: ci.yml
benchmarks/fixtures/: core.json  core.schema.json
docs/: agent-sdk-ingestion.md  agent-usage.md  architecture-guard-workflow.md  development.md  evaluation.md  install.md  internal-test-report-template.md  internal-testing.md  roadmap.md  security.md  spec-v2.md  uninstall.md
examples/: architecture-guard-facts.json  architecture-guard-rules.json  claude-hooks.json  mcp-config.json  nesy-config.json
examples/hooks/: nesy_context_inject.py  nesy_stop_check.py
examples/internal-test/: README.md  agent-instructions.md  claude-hooks.json  hook-pretooluse.sh  hook-stop.sh  mcp-stdio-config.json  nesy-config.json  run-http.sh  smoke.py  tool-policy.md
scripts/: agent_ingest_openai.py  architecture_guard.py
src/nesy_reasoning_mcp/: __init__.py  __main__.py  audit_cli.py  cli.py  config.py  evaluation.py  file_access.py  hooks.py  http_server.py  normalization.py  reasoning.py  schemas.py  server.py  store.py  time_utils.py  tool_candidate_validation.py  tool_common.py  tool_counterfactual.py  tool_ephemeral.py  tool_independence.py  tool_io.py  tool_names.py  tool_output_schemas.py  tool_queue_status.py  tool_reasoning.py  tool_registry.py  tool_relations.py  tool_result.py  tool_review_queue.py  tool_summary.py  tools.py
src/nesy_reasoning_mcp/auto_ingest/: __init__.py  canonicalization.py  cli.py  crawler.py  enqueue.py  external_retrieval.py  extraction.py  fetcher.py  gate.py  nesy_facts.py  openai_agents.py  policy.py  providers.py  review_queue.py  review_voting.py  review_worker.py  runner_types.py  scheduler.py  (+7 more)
tests/: test_architecture_guard_script.py  test_auto_ingest_crawler.py  test_auto_ingest_dry_run.py  test_auto_ingest_enqueue.py  test_auto_ingest_extraction.py  test_auto_ingest_review_worker.py  test_auto_ingest_scheduler.py  test_auto_ingest_schemas.py  test_auto_ingest_search.py  test_auto_ingest_worker.py  test_auto_ingest_write_mode.py  test_cli.py  test_config.py  test_evaluation.py  test_external_retrieval.py  test_hooks.py  test_http_server.py  test_internal_test_examples.py  test_normalization.py  test_properties.py  test_review_voting.py  test_server.py  test_store.py  test_tool_candidate_validation.py  test_tool_contradictions.py  test_tool_core.py  test_tool_counterfactual.py  test_tool_ephemeral.py  test_tool_io.py  test_tool_queue_status.py  test_tool_reasoning.py  test_tool_review_queue.py  test_tool_summary.py  test_tools.py
(+8 files in other folders)
