[project]
name = "nesy-reasoning-mcp"
version = "1.0.0"
description = "Deterministic neuro-symbolic reasoning MCP server."
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
  "mcp>=1.27,<2",
  "networkx>=3,<4",
  "pydantic>=2,<3",
  "starlette>=0.50,<1",
  "uvicorn>=0.38,<1",
]

[project.optional-dependencies]
eval = [
  "openai>=2,<3",
]

[project.scripts]
nesy-reasoning-mcp = "nesy_reasoning_mcp.cli:main"

[dependency-groups]
dev = [
  "hypothesis>=6,<7",
  "jsonschema>=4,<5",
  "pytest>=8,<10",
  "pytest-asyncio>=1,<2",
  "ruff>=0.14,<1",
]

[build-system]
requires = ["uv_build>=0.10,<0.11"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
